--- a/src/packages.config
+++ b/src/packages.config
@@ -1,58 +1,58 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MessagePack" version="2.5.172" targetFramework="net48" />
-  <package id="MessagePack.Annotations" version="2.5.172" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="MessagePack" version="3.1.0" targetFramework="net48" />
+  <package id="MessagePack.Annotations" version="3.1.0" targetFramework="net48" />
+  <package id="MessagePackAnalyzer" version="3.1.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
-  <package id="Microsoft.IO.Redist" version="6.0.1" targetFramework="net48" />
-  <package id="Microsoft.NET.StringTools" version="17.11.4" targetFramework="net48" />
-  <package id="Microsoft.ServiceHub.Analyzers" version="4.6.13" targetFramework="net48" />
-  <package id="Microsoft.ServiceHub.Framework" version="4.6.13" targetFramework="net48" />
-  <package id="Microsoft.ServiceHub.Resources" version="4.4.10157" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.ComponentModelHost" version="17.11.260" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Composition" version="17.11.13" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Composition.Analyzers" version="17.11.13" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.CoreUtility" version="17.11.260" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.ImageCatalog" version="17.11.40262" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="17.11.40252" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Interop" version="17.11.40262" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.LanguageServer.Client" version="17.11.32" targetFramework="net48" />
+  <package id="Microsoft.IO.Redist" version="6.1.0" targetFramework="net48" />
+  <package id="Microsoft.NET.StringTools" version="17.12.6" targetFramework="net48" />
+  <package id="Microsoft.ServiceHub.Framework" version="4.7.36" targetFramework="net48" />
+  <package id="Microsoft.ServiceHub.Resources" version="4.4.14194" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="17.12.215" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Composition" version="17.12.18" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Composition.Analyzers" version="17.12.18" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="17.12.215" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.ImageCatalog" version="17.12.40391" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="17.12.40390" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Interop" version="17.12.40391" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.LanguageServer.Client" version="17.12.48" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.LanguageServer.Protocol" version="17.2.8" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.RemoteControl" version="16.3.52" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.RpcContracts" version="17.11.8" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Telemetry" version="17.11.20" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="17.11.260" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Text.Logic" version="17.11.260" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Threading" version="17.11.20" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="17.11.20" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.VisualStudio.Utilities" version="17.11.40262" targetFramework="net48" />
-  <package id="Microsoft.VisualStudio.Utilities.Internal" version="16.3.73" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.RpcContracts" version="17.12.12" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Telemetry" version="17.12.48" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="17.12.215" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="17.12.215" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Threading" version="17.12.19" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="17.12.19" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Utilities" version="17.12.40391" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Utilities.Internal" version="16.3.90" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Validation" version="17.8.8" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="Nerdbank.Streams" version="2.11.79" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
-  <package id="StreamJsonRpc" version="2.19.27" targetFramework="net48" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
-  <package id="System.ComponentModel.Composition" version="8.0.0" targetFramework="net48" />
-  <package id="System.Composition" version="8.0.0" targetFramework="net48" />
-  <package id="System.Composition.AttributedModel" version="8.0.0" targetFramework="net48" />
-  <package id="System.Composition.Convention" version="8.0.0" targetFramework="net48" />
-  <package id="System.Composition.Hosting" version="8.0.0" targetFramework="net48" />
-  <package id="System.Composition.Runtime" version="8.0.0" targetFramework="net48" />
-  <package id="System.Composition.TypedParts" version="8.0.0" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
-  <package id="System.IO.Pipelines" version="8.0.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Reflection.Metadata" version="8.0.1" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="StreamJsonRpc" version="2.20.20" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="9.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Composition" version="9.0.0" targetFramework="net48" />
+  <package id="System.Composition" version="9.0.0" targetFramework="net48" />
+  <package id="System.Composition.AttributedModel" version="9.0.0" targetFramework="net48" />
+  <package id="System.Composition.Convention" version="9.0.0" targetFramework="net48" />
+  <package id="System.Composition.Hosting" version="9.0.0" targetFramework="net48" />
+  <package id="System.Composition.Runtime" version="9.0.0" targetFramework="net48" />
+  <package id="System.Composition.TypedParts" version="9.0.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.0" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="9.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
-  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="8.0.5" targetFramework="net48" />
-  <package id="System.Threading.AccessControl" version="8.0.0" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Dataflow" version="8.0.1" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.0" targetFramework="net48" />
+  <package id="System.Threading.AccessControl" version="9.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Dataflow" version="9.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
