--- a/src/KlemmUISyntax.csproj
+++ b/src/KlemmUISyntax.csproj
@@ -44,6 +44,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CopyVsixExtensionFiles>False</CopyVsixExtensionFiles>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Grammars\kui.tmLanguage">
